--- a/moduloseguimiento.API/appsettings.json
+++ b/moduloseguimiento.API/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
 
-  "KeyHash": "ow7dxys8glfor9tnc2ansdfo1etkgjcdewqdwqdqwdqdwqdwqdv",
+  "KeyHash": "ow7dx3ys8glfor9tnc2ansasdfo1etkgjcdqdqdv",
 
   "Settings": {
     "masterSecret": "ssswww222",
@@ -27,12 +27,12 @@
     "Port": 587,
     "UserNameSMTP": "correo",
     "PasswordSMTP": "contrasenia",
-    "FromEmail": "UV_EminusSeguimiento",
+    "FromEmail": "correo",
     "EnableSsl": true
   },
 
   "AUTH_JWT": {
-    "JWT_SECRET_KEY": "$1NS3*t3#ssssssw+Qq",
+    "JWT_SECRET_KEY": "$123NS3*te4323#ssssssw+Qq",
     "JWT_AUDIENCE_TOKEN": "eminus.uv.mx",
     "JWT_ISSUER_TOKEN": "eminus.uv.mx",
     "JWT_ACCESS_TOKEN_EXPIRE_MINUTES": 60, //60
@@ -55,8 +55,8 @@
     "AES": ""
   },
   "SPARH": {
-    "AES": "26D19CF8-s",
-    "LlaveCifrada": "qGeb2t/0!s{=,Yd!;m?Fsn"
+    "AES": "26D119CF8-s223vhj32",
+    "LlaveCifrada": "qGaseb2t/0!s{=,Yd!;m?Fsn"
   }
 
 }
